# autoresetlol

./: .gitignore  AGENTS.md  AntiFateEngine.spec  AntiFateEngine_v1.0.spec  AntiFateEngine_v1.01.spec  AntiFateEngine_v1.02.spec  AntiFateEngine_v1.03.spec  AntiFateEngine_v1.04.spec  AntiFateEngine_v1.05.spec  AntiFateEngine_v1.06.spec  AntiFateEngine_v1.07.spec  AntiFateEngine_v1.08.spec  AntiFateEngine_v1.09.spec  AntiFateEngine_v1.10.spec  AntiFateEngine_v1.11.spec  AntiFateEngine_v1.12.spec  AntiFateEngine_v7.1.spec  AntiFateEngine_v7.10.spec  AntiFateEngine_v7.11.spec  AntiFateEngine_v7.12.spec  AntiFateEngine_v7.14.spec  AntiFateEngine_v7.15.spec  AntiFateEngine_v7.4.spec  AntiFateEngine_v7.5.spec  AntiFateEngine_v7.6.spec  AntiFateEngine_v7.7.spec  AntiFateEngine_v7.8.spec  AntiFateEngine_v7.9.spec  AntiFateEngine_v7.spec  CoordPicker.spec  beads_report_autoresetlol_2025-12-21.md  beads_report_autoresetlol_2025-12-22.md  bot.py  config.json  config.py  constants.py  dimmer.py  gui.py  kill_process.py  logger.py  (+4 more)
.beads/: issues.jsonl
utils/: AGENTS.md  coord_picker.py  windows.py
